@@ -3,6 +3,8 @@ Version 2.7
 * Fix problem with "Allow DifxParameter message to specify new stop time" that caused premature termination of the job.  Bug introduced in SVN commit 7910 on July 20, 2017
   - Will put patch into the 2.6 branch.
 * Support IPP 2019 series
+* Fix native mk5 issue where buffer locks would be ignored on a long-ish timeout that can happen on start-up.
+  - Will put patch into the 2.6 branch.
 * Post DiFX-2.6
 
 Version 2.6
